--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,6 @@ qiskit-ibmq-provider==0.20.0
 qiskit-terra==0.23.1
 qwrapper @ git+ssh://git@github.com/konakaji/qwrapper.git
 scipy>=1.7.0
+openfermion==1.5.1
+openfermionpyscf==0.5
+pyscf==2.0.1
