--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,94 @@
-venv
-.idea/*
-common/.*
-output/*
-*.pyc
-.*
-*.db
-*.hdf5
-checkpoints/*
+# Editor backup files
+*~
+
+# Patch files
+*.orig
+*.rej
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+*.x
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+**/Output/
+**/.lit*.txt
+
+# Executables
+*.exe
 *.out
-gptqe_task/wandb/*
-wandb/*
-gptqe_task/checkpoints/*
-gptqe_task/*.db
-lightning_logs/*
-!.dvc
-!.dvcignore
-data/*
-tutorial/*
-saved_models/*
-char_gen.py
-wonderland.txt
-task/lightning_logs
-notebooks/*.hdf5
-operator_pool/*.hdf5
+*.app
+**/out/
+/*build*/
+/*Build/
+/plugins/
+/other_library_builds/
+/.cproject
+/.project
+/.settings/
+**/*.jar
+**/.ptp*
+*.ab
+/dist/
+/*egg*/
+/python/*egg*
+/*tmp*/
+/wheelhouse/
+**/.ipynb_checkpoints
+compile_commands.json
+**/*.dat
+**/.antlr
+__pycache__/
+
+# IDE files
+.vscode/*
+.theia/*
+
+# Container files
+**/.docker/*
+
+# LSP files
+.cache/*
+
+# LLVM/MLIR files
+*.ll 
+*.bc
+
+# Build results
+[Bb]in/
+[Oo]bj/
+*.bson
+*.csv
+*.bin
+docs/sphinx/_doxygen
+docs/sphinx/_mdgen
+**/_build/*
+_version.py
+
+# third party integrations
+simulators/
+
+# macOS
+.DS_Store
+
+# JetBrains IDE files
+.idea
