--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ qiskit-terra==0.23.1
 qwrapper @ git+ssh://git@github.com/konakaji/qwrapper.git
 qswift @ git+ssh://git@github.com/konakaji/qswift.git
 benchmark @ git+ssh://git@github.com/konakaji/benchmark.git
+qml @ git+ssh://git@github.com/konakaji/qml.git
 scipy>=1.7.0
 openfermion==1.5.1
 openfermionpyscf==0.5
