--- a/requirements_mac.txt
+++ b/requirements_mac.txt
@@ -16,4 +16,5 @@ qml @ git+ssh://git@github.com/konakaji/qml.git
 scipy>=1.7.0
 openfermion==1.5.1
 openfermionpyscf==0.5
+optuna==3.4.0
 pyscf==2.0.1
