--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,7 @@
 	url = git@github.com:poojarao8/qswift.git
 [submodule "benchmark"]
 	path = benchmark
-	url = git@github.com:konakaji/benchmark.git
+	url = git@github.com:poojarao8/benchmark.git
 [submodule "qml"]
 	path = qml
 	url = git@github.com:konakaji/qml.git
