--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "qwrapper"]
 	path = qwrapper
-	url = git@github.com:poojarao8/qwrapper.git
+	url = git@github.com:konakaji/qwrapper.git
 [submodule "qswift"]
 	path = qswift
-	url = git@github.com:poojarao8/qswift.git
+	url = git@github.com:konakaji/qswift.git
 [submodule "benchmark"]
 	path = benchmark
-	url = git@github.com:poojarao8/benchmark.git
+	url = git@github.com:konakaji/benchmark.git
 [submodule "qml"]
 	path = qml
-	url = git@github.com:poojarao8/qml.git
+	url = git@github.com:konakaji/qml.git
