--- a/requirements_pt1.txt
+++ b/requirements_pt1.txt
@@ -17,3 +17,7 @@ optuna==3.4.0
 ml-collections==0.1.1
 wandb==0.16.0
 transformers==4.31.0
+tequila-basic==1.8.9
+pyscf==2.1.0
+openfermion>=1.5.1
+openfermionpyscf>=0.5
